# quantml-trader

./: .env.example  .gitignore  .pre-commit-config.yaml  COMPLETION_SUMMARY.md  CONTRIBUTING.md  QUANTML_TRADER_MERGED_PLAN.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml
docs/: README.md
