[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantml-trader"
version = "2.0.0"
description = "Production-ready quantitative ML trading system with comprehensive risk management and backtesting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Shiong Tan", email = "shiong.tan@example.com"},
]
keywords = [
    "algorithmic-trading",
    "machine-learning",
    "quantitative-finance",
    "backtesting",
    "risk-management",
    "interactive-brokers",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core dependencies
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",

    # Visualization
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.11.0",

    # Backtesting and metrics
    "scipy>=1.9.0",

    # Configuration
    "pyyaml>=6.0",

    # HTTP requests
    "requests>=2.28.0",

    # Model persistence
    "joblib>=1.2.0",

    # Logging and monitoring
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=0.990",
    "pre-commit>=3.0.0",
]

advanced = [
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.19.0",
]

# Future: Interactive Brokers integration (Phase 2)
# broker = [
#     "ib_insync>=0.9.70",
# ]

[project.urls]
Homepage = "https://github.com/shiong-tan/quantml-trader"
Documentation = "https://github.com/shiong-tan/quantml-trader/blob/main/README.md"
Repository = "https://github.com/shiong-tan/quantml-trader"
Issues = "https://github.com/shiong-tan/quantml-trader/issues"

[project.scripts]
quantml-trader = "algo_trading.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["algo_trading*"]
exclude = ["tests*", "docs*"]

# ==================== BLACK ====================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.pytest_cache
  | \.mypy_cache
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

# ==================== RUFF ====================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (we'll handle complexity case by case)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG", "S101"]  # Allow unused args and asserts in tests

# ==================== MYPY ====================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
disallow_incomplete_defs = false  # Gradually enable
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "xgboost.*",
    "lightgbm.*",
]
ignore_missing_imports = true

# ==================== PYTEST ====================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=algo_trading",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["algo_trading/tests", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ==================== COVERAGE ====================
[tool.coverage.run]
source = ["algo_trading"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
